--- a/MobileRobots.vcxproj.filters
+++ b/MobileRobots.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClCompile Include="src\AI.cpp">
       <Filter>Source Files\AI</Filter>
     </ClCompile>
+    <ClCompile Include="src\Graphics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Module.hpp">
@@ -159,6 +162,9 @@
     </ClInclude>
     <ClInclude Include="src\Math.hpp">
       <Filter>Header Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphics.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
